# uno_local

./: .LICENSE.un~  .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml  extra_info.md
crates/uno_cli/: Cargo.toml
crates/uno_cli/src/: main.rs
crates/uno_core/: Cargo.toml
crates/uno_core/src/: lib.rs
crates/uno_net/: Cargo.toml
crates/uno_net/src/: lib.rs
crates/uno_protocol/: Cargo.toml
crates/uno_protocol/src/: lib.rs
crates/uno_room/: Cargo.toml
crates/uno_room/src/: lib.rs
docs/: development.md  manual-test.md  ui_graphics_and_card.md
docs/en_translation/: development.md
openspec/changes/add-factorial-sqrt-cards/: design.md  proposal.md  tasks.md
openspec/changes/add-factorial-sqrt-cards/specs/mathematical-wilds/: spec.md
openspec/changes/create-local-uno-tui/: design.md  proposal.md  tasks.md
openspec/changes/create-local-uno-tui/specs/local-uno-ai/: spec.md
openspec/changes/create-local-uno-tui/specs/local-uno-game/: spec.md
openspec/changes/create-local-uno-tui/specs/uno-tui/: spec.md
openspec/changes/create-networked-uno-cli-client/: design.md  proposal.md  tasks.md
openspec/changes/create-networked-uno-cli-client/specs/networked-rooms/: spec.md
openspec/changes/create-networked-uno-cli-client/specs/peer-connectivity/: spec.md
openspec/changes/refill-exhausted-decks/: design.md  proposal.md  tasks.md
openspec/changes/virtualize-large-hands/: design.md  proposal.md  tasks.md
src/: ai.rs  app.rs  card_art.rs  core.rs  graphics.rs  i18n.rs  main.rs  screen.rs  termwez.rs  ui.rs  view.rs
(+4 files in other folders)
