[workspace]
members = [
    "crates/uno_core",
    "crates/uno_protocol",
    "crates/uno_net",
    "crates/uno_room",
    "crates/uno_cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/Mcas-996/uno_online"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
